Add SELF space II - fix color code. (#35)
* Add SYMBOL space

* Add SELF space

* Update index.json

* Update skin.scss

* min size of png

* Revert "min size of png"

This reverts commit 6fbee5ffbe39acc99a71852563d2b407d063f08c.

* smaller png file size

--- a/spaces/self/skin.scss
+++ b/spaces/self/skin.scss
@@ -1,5 +1,5 @@
 .self {
-	--primary-color: #87fce6;
+	  --primary-color: #384aff;
     --header-bg: #162f1f;
     --bg-color: #0a2b17;
     --border-color: #d6a838;
