--- a/spaces/uniswap/skin.scss
+++ b/spaces/uniswap/skin.scss
@@ -1,4 +1,4 @@
-.uni {
+.uniswap {
   --primary-color: #ff007a;
   --bg-color: #FFFFFF;
   --text-color: #000000;
@@ -11,7 +11,7 @@
 }
 
 @media (prefers-color-scheme: dark) {
-  .uni {
+  .uniswap {
     --primary-color: #2172E5;
     --bg-color: #212429;
     --text-color: #FFFFFF;
