fix link colors (#81)

--- a/spaces/uniswap/skin.scss
+++ b/spaces/uniswap/skin.scss
@@ -2,7 +2,7 @@
   --primary-color: #ff007a;
   --bg-color: #FFFFFF;
   --text-color: #000000;
-  --link-color: #ff007a;
+  --link-color: #565A69;
   --heading-color: #ff007a;
   --border-color: #FF8CC3;
   --header-bg: #FFFFFF;
@@ -15,7 +15,7 @@
     --primary-color: #2172E5;
     --bg-color: #212429;
     --text-color: #FFFFFF;
-    --link-color: #2172E5;
+    --link-color: #C3C5CB;
     --heading-color: #2172E5;
     --border-color: #3680E7;
     --header-bg: #212429;
