--- a/spaces/ampleforth/skin.scss
+++ b/spaces/ampleforth/skin.scss
@@ -1,10 +1,10 @@
 .ampleforth {
   --primary-color: #ff2d55;
   --bg-color: radial-gradient(circle, rgba(235,173,185,1) 0%, rgba(150,149,233,1) 100%);
-  --text-color: white;
-  --link-color: #f1dbdf;
+  --text-color: #f1dbdf;
+  --link-color: white;
   --heading-color: white;
   --border-color: white;
   --header-bg: transparent;
-  --block-bg: transparent;
+  --block-bg: #ffffff26;
 }
