Update uniswap space

--- a/spaces/uniswap/skin.scss
+++ b/spaces/uniswap/skin.scss
@@ -1,12 +1,11 @@
 .uniswap {
   --primary-color: #ff007a;
   --bg-color: #FFFFFF;
-  --text-color: #000000;
-  --link-color: #565A69;
+  --text-color: #565b69;
+  --link-color: #000000;
   --heading-color: #ff007a;
-  --border-color: #FF8CC3;
+  --border-color: #e1e3e7;
   --header-bg: #FFFFFF;
-
   --block-bg: transparent;
 }
 
@@ -14,12 +13,11 @@
   .uniswap {
     --primary-color: #2172E5;
     --bg-color: #212429;
-    --text-color: #FFFFFF;
-    --link-color: #C3C5CB;
+    --text-color: #c2c5ca;
+    --link-color: #FFFFFF;
     --heading-color: #2172E5;
-    --border-color: #3680E7;
+    --border-color: #40454f;
     --header-bg: #212429;
-
     --block-bg: transparent;
   }
 }
