edit sccc and strategies (#95)
* Add GOF space

* update key and skin class name

* add chainId and decimals

* edit  sccc and strategies

Co-authored-by: luh <luhua@hztuoken.com>

--- a/spaces/golff/skin.scss
+++ b/spaces/golff/skin.scss
@@ -1,9 +1,9 @@
 .golff {
-  --primary-color: #d2004a;
-  --bg-color: #efe7ea;
-  --text-color: #a98592;
-  --link-color: #5b2739;
-  --heading-color: #5b2839;
-  --border-color: #e2cfd5;
-  --header-bg: #f3edef;
+  --primary-color: #118b80;
+  --bg-color: #f1f8f2;
+  --text-color: #949ca9;
+  --link-color: #212529;
+  --heading-color: #212529;
+  --border-color: #e1e1e1;
+  --header-bg: white;
 }
