Change governance token and color tweak for based (#118)

--- a/spaces/based/skin.scss
+++ b/spaces/based/skin.scss
@@ -3,7 +3,7 @@
   --header-bg: #296788;
   --bg-color: #296788;
   --border-color: #F7ACB2;
-  --text-color: #fff;
+  --text-color: #F7ACB2;
   --link-color: #fff;
   --heading-color: #F7ACB2;
 }
