--- a/spaces/spaceswap/skin.scss
+++ b/spaces/spaceswap/skin.scss
@@ -4,7 +4,7 @@
   --text-color: #000F89;
   --link-color: #FE7A79;
   --heading-color: #000F89;
-  --border-color: #FBF0ED;
+  --border-color: #E0CBC6;
   --header-bg: #FBF0ED;
   --block-bg: #FBF0ED;
 }
