--- a/spaces/spaceswap/skin.scss
+++ b/spaces/spaceswap/skin.scss
@@ -1,7 +1,7 @@
 .spaceswap {
   --primary-color: #FE7A79;
   --bg-color: #FBF0ED;
-  --text-color: #000F89;
+  --text-color: #957268;
   --link-color: #FE7A79;
   --heading-color: #000F89;
   --border-color: #E0CBC6;
