--- a/skins/mettalex.scss
+++ b/skins/mettalex.scss
@@ -1,10 +1,10 @@
 .mettalex {
-  --primary-color: ##5643CC;
-  --bg-color: #5643CC;
-  --text-color: #ffffff;
-  --link-color: #eeeeee;
-  --heading-color: #dddddd;
+  --primary-color: #5643CC;
+  --bg-color: #ffffff;
+  --text-color: #000000;
+  --link-color: #5643CC;
+  --heading-color: #000000; 
   --border-color: #d1d5da;
-  --header-bg: #5643CC;
-  --block-bg: white;
+  --header-bg: #d1d5da;
+  --block-bg: #ffffff;
 }
