Update MoonTools space (#285)
* Add MoonTools space

* Add MoonTools skin

* Update moontools.scss

* Add MoonTools custom domain

--- a/skins/moontools.scss
+++ b/skins/moontools.scss
@@ -1,5 +1,5 @@
 .moontools {
-  --primary-color: white;
+  --primary-color: #84FFFF;
   --bg-color: #000000;
   --text-color: white;
   --link-color: #84FFFF;
