--- a/skins/mstable.scss
+++ b/skins/mstable.scss
@@ -2,7 +2,7 @@
   --primary-color: #1065E0;
   --bg-color: #F8F5F2;
   --text-color: #000000;
-  --link-color: #111111;
+  --link-color: #1065e0;
   --heading-color: #111111;
   --border-color: #d1d5da;
   --header-bg: #FFAD2B;
